<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LL1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A1303030"
    android:orientation="vertical"
    android:padding="3dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/expression"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFF"
        android:cursorVisible="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="start|center_vertical"
        android:textColor="#000000"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="25sp"
        android:typeface="monospace"
        app:fontFamily="sans-serif" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:max="10"
            android:progress="0"
            android:thumb="@drawable/seekbar_image"/>
    </LinearLayout>

    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical|end"
        android:textColor="#000000"
        android:textSize="30sp"
        android:typeface="monospace"
        app:fontFamily="sans-serif" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp">

        <Button
            android:id="@+id/bt_left_bracket"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/left_bracket"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <Button
            android:id="@+id/bt_right_bracket"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/right_bracket"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <Button
            android:id="@+id/bt_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clear"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <Button
            android:id="@+id/bt_delete_last"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_last"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sqrt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FAF410"
            android:gravity="center"
            android:text="@string/sqrt" />
        <TextView
            android:id="@+id/sin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FAF410"
            android:gravity="center"
            android:text="@string/sin" />
        <TextView
            android:id="@+id/cos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FAF410"
            android:gravity="center"
            android:text="@string/cos" />
        <TextView
            android:id="@+id/tan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FAF410"
            android:gravity="center"
            android:text="@string/tan" />

    </LinearLayout>
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/bt_one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/one"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <Button
            android:id="@+id/bt_two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/two"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <Button
            android:id="@+id/bt_three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/three"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <Button
            android:id="@+id/bt_plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FAF410"
            android:gravity="center"
            android:text="@string/e" />
        <TextView
            android:id="@+id/pi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FAF410"
            android:gravity="center"
            android:text="@string/pi" />
        <TextView
            android:id="@+id/x2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FAF410"
            android:gravity="center"
            android:text="@string/x2" />
        <TextView
            android:id="@+id/x3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FAF410"
            android:gravity="center"
            android:text="@string/x3" />

    </LinearLayout>
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/bt_four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/four"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <Button
            android:id="@+id/bt_five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/five"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <Button
            android:id="@+id/bt_six"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/six"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <Button
            android:id="@+id/bt_minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/xy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FAF410"
            android:gravity="center"
            android:text="@string/xy" />
        <TextView
            android:id="@+id/asin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FAF410"
            android:gravity="center"
            android:text="@string/asin" />
        <TextView
            android:id="@+id/acos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FAF410"
            android:gravity="center"
            android:text="@string/acos" />
        <TextView
            android:id="@+id/atan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FAF410"
            android:gravity="center"
            android:text="@string/atan" />

    </LinearLayout>
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/bt_seven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <Button
            android:id="@+id/bt_eight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <Button
            android:id="@+id/bt_nine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <Button
            android:id="@+id/bt_multi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multi"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/loge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FAF410"
            android:gravity="center"
            android:text="@string/loge" />
        <TextView
            android:id="@+id/log10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FAF410"
            android:gravity="center"
            android:text="@string/log10" />
        <TextView
            android:id="@+id/ceil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="" />
        <TextView
            android:id="@+id/floor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="" />

    </LinearLayout>
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/bt_point"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/point"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <Button
            android:id="@+id/bt_zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <Button
            android:id="@+id/bt_equal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <Button
            android:id="@+id/bt_div"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/div"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/shift"

            android:background="@drawable/bt_normal"
            android:text="@string/shift"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <Button
            android:id="@+id/answerget"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:text="Ans"
            android:textSize="20sp">

        </Button>

        <Spinner
            android:id="@+id/ansspinner"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setdouble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textColor="#FAF410"
            android:text="设置\n精度" />
        <TextView
            android:id="@+id/doublebarstart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FAF410"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="0" />

        <SeekBar
            android:id="@+id/seekBarDouble"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:max="15"
            android:progress="6"
            android:thumb="@drawable/seekbar_image"/>

        <TextView
            android:id="@+id/maxDouble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FAF410"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="15" />

        <Switch
            android:id="@+id/ifHuDu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="20dp"
            android:shadowColor="#FAF410"
            android:textColor="#FAF410"
            android:text="@string/pi2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textColor="#FAF410"
            android:text="@string/a360" />
    </LinearLayout>

</LinearLayout>